[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdmf"
authors = [
  { name="Ryan Ly", email="rly@lbl.gov" },
  { name="Andrew Tritt", email="ajtritt@lbl.gov" },
  { name="Oliver Ruebel", email="oruebel@lbl.gov" },
  { name="Ben Dichter", email="ben.dichter@gmail.com" },
  { name="Matthew Avaylon", email="mavaylon@lbl.gov" },
]
description = "A hierarchical data modeling framework for modern science data standards"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "h5py>=2.10",
    "jsonschema>=2.6.0",
    "numpy>=1.18",
    "pandas>=1.0.5",
    "ruamel.yaml>=0.16",
    "scipy>=1.4",
    "importlib-resources; python_version < '3.9'",  # TODO: remove when minimum python version is 3.9
]
dynamic = ["version"]

[project.optional-dependencies]
zarr = ["zarr>=2.12.0"]
tqdm = ["tqdm>=4.41.0"]
termset = ["linkml-runtime>=1.5.5; python_version >= '3.9'",
           "schemasheets>=0.1.23; python_version >= '3.9'",
           "oaklib>=0.5.12; python_version >= '3.9'",
           "pyyaml>=6.0.1; python_version >= '3.9'"]

[project.urls]
"Homepage" = "https://github.com/hdmf-dev/hdmf"
"Bug Tracker" = "https://github.com/hdmf-dev/hdmf/issues"

[project.scripts]
validate_hdmf_spec = "hdmf.testing.validate_spec:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# this file is created/updated when the package is installed and used in
# src/hdmf/__init__.py to set `hdmf.__version__`
version-file = "src/hdmf/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/hdmf"]

# [tool.mypy]
# no_incremental = true  # needed b/c mypy and ruamel.yaml do not play nice. https://github.com/python/mypy/issues/12664

# [tool.interrogate]
# fail-under = 95
# verbose = 1

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"
norecursedirs = "tests/unit/helpers"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,hdmf-common-schema,./docs/_build/*,*.ipynb"
ignore-words-list = "datas"

[tool.coverage.run]
branch = true
source = ["src/"]
omit = [
    "src/hdmf/_due.py",
    "src/hdmf/testing/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

# [tool.black]
# line-length = 120
# preview = true
# exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb"
# force-exclude = "src/hdmf/common/hdmf-common-schema|docs/gallery"

[tool.ruff]
select = ["E", "F", "T100", "T201", "T203"]
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
  "src/hdmf/common/hdmf-common-schema",
  "docs/source/conf.py",
  "src/hdmf/_due.py",
  "docs/source/tutorials/",
  "docs/_build/",
]
line-length = 120

[tool.ruff.per-file-ignores]
"docs/gallery/*" = ["E402", "T201"]
"src/*/__init__.py" = ["F401"]
"setup.py" = ["T201"]
"test_gallery.py" = ["T201"]

[tool.ruff.mccabe]
max-complexity = 17
