[bdist_wheel]
universal = 1

[versioneer]
VCS = git
versionfile_source = src/hdmf/_version.py
versionfile_build = hdmf/_version.py
style = pep440-pre
tag_prefix = *.*.*

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__,
  build/,
  dist/,
  src/hdmf/common/hdmf-common-schema,
  docs/source/conf.py
  versioneer.py
  src/hdmf/_version.py
  src/hdmf/_due.py
per-file-ignores =
  docs/gallery/*:E402,T001
  docs/source/tutorials/*:E402
  src/hdmf/__init__.py:F401
  src/hdmf/backends/__init__.py:F401
  src/hdmf/backends/hdf5/__init__.py:F401
  src/hdmf/build/__init__.py:F401
  src/hdmf/spec/__init__.py:F401
  src/hdmf/validate/__init__.py:F401
  setup.py:T001
  test.py:T001

[metadata]
description-file = README.rst
