[versioneer]
VCS = git
versionfile_source = src/hdmf/_version.py
versionfile_build = hdmf/_version.py
tag_prefix = ''

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__,
  build/,
  dist/,
  src/hdmf/common/hdmf-common-schema,
  docs/source/conf.py
  versioneer.py
  src/hdmf/_version.py
  src/hdmf/_due.py
  docs/source/tutorials/
  docs/_build/
per-file-ignores =
  docs/gallery/*:E402,T201
  src/hdmf/__init__.py:F401
  src/hdmf/backends/__init__.py:F401
  src/hdmf/backends/hdf5/__init__.py:F401
  src/hdmf/build/__init__.py:F401
  src/hdmf/spec/__init__.py:F401
  src/hdmf/validate/__init__.py:F401
  setup.py:T201
  test.py:T201

[metadata]
description_file = README.rst
